# ml-labs-sem6

./: .envrc  .gitignore  README.md  pyproject.toml
docs/: library_extraction_plan.md
labs/lr-1/: README.md
labs/lr-1/notebooks/: main.ipynb
labs/lr-1/report/: lab.md
labs/lr-1/src/: run_lr1_analysis.py
labs/lr-2/: README.md
labs/lr-2/notebooks/: main.ipynb
labs/lr-2/report/: lab.md
labs/lr-3/: README.md
labs/lr-3/notebooks/: main.ipynb
labs/lr-3/report/: lab.md
labs/lr-3/src/: data_loading.py
labs/lr-4/: README.md
labs/lr-4/notebooks/: main.ipynb
labs/lr-4/report/: lab.md
labs/lr-5/: README.md
labs/lr-5/notebooks/: main.ipynb
labs/lr-5/report/: lab.md
labs/lr-6/: README.md
labs/lr-6/notebooks/: main.ipynb
labs/lr-6/report/: lab.md
labs/lr-7/: README.md
labs/lr-7/notebooks/: main.ipynb
labs/lr-7/report/: lab.md
mlcore/: __init__.py  pyproject.toml  types.py  validation.py
mlcore/base/: __init__.py  types.py  validation.py
mlcore/data/: __init__.py  datasets.py  loaders.py  registry.py
mlcore/metrics/: __init__.py  classification.py  curves.py  report.py
mlcore/plotting/: __init__.py  evaluation.py
mlcore/preprocessing/: __init__.py  encoding.py  scaling.py  splitting.py
mlcore/tabular/: __init__.py  analysis.py  feature_scoring.py  plotting.py  preprocessing.py  statistics.py  workflow.py
mlcore/trees/: __init__.py  criteria.py
mlcore/utils/: __init__.py  notebook.py  timing.py
scripts/: import_all_datasets.py
