[project]
name = "mlcore"
version = "0.1.0"
description = "Reusable utilities for ML labs"
requires-python = ">=3.11,<3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "mlcore",
    "mlcore.data",
    "mlcore.metrics",
    "mlcore.plotting",
    "mlcore.preprocessing",
    "mlcore.tabular",
    "mlcore.trees",
    "mlcore.utils",
]

[tool.setuptools.package-dir]
mlcore = "."
"mlcore.data" = "data"
"mlcore.metrics" = "metrics"
"mlcore.plotting" = "plotting"
"mlcore.preprocessing" = "preprocessing"
"mlcore.tabular" = "tabular"
"mlcore.trees" = "trees"
"mlcore.utils" = "utils"
